# opentelemetry-operations-python

./: .gitattributes  .isort.cfg  .pylintrc  out.py  pyproject.toml  tox.ini
.circleci/: config.yml
ae-stdlogging/: GEMINI.md  Makefile  README.md  deployment_metadata.json  loadtest.env  pyproject.toml
ae-stdlogging/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
ae-stdlogging/app/: agent.py  agent_engine_app.py
ae-stdlogging/app/utils/: deployment.py  gcs.py  tracing.py  typing.py
ae-stdlogging/tests/load_test/: load_test.py  load_test_simple.py
cloudfunctions-example/: main.py  requirements.txt
google-proto-stubs/: create_stubs.sh  fds_to_files.py  setup.cfg
google-proto-stubs/src/google/api/: distribution_pb2.pyi  field_behavior_pb2.pyi  label_pb2.pyi  launch_stage_pb2.pyi  metric_pb2.pyi  monitored_resource_pb2.pyi  resource_pb2.pyi
google-proto-stubs/src/google/cloud/monitoring_v3/proto/: alert_pb2.pyi  common_pb2.pyi  metric_pb2.pyi  metric_service_pb2.pyi  mutation_record_pb2.pyi
google-proto-stubs/src/google/cloud/trace_v2/proto/: trace_pb2.pyi  tracing_pb2.pyi
google-proto-stubs/src/google/rpc/: status_pb2.pyi
opentelemetry-exporter-cloud-monitoring/: setup.cfg
opentelemetry-exporter-cloud-monitoring/src/opentelemetry/exporter/cloud_monitoring/: __init__.py
opentelemetry-exporter-cloud-trace/: setup.cfg
opentelemetry-exporter-cloud-trace/src/opentelemetry/exporter/cloud_trace/: __init__.py
opentelemetry-exporter-gcp-logging/src/opentelemetry/exporter/cloud_logging/: __init__.py
opentelemetry-exporter-gcp-logging/tests/: test_cloud_logging.py
opentelemetry-exporter-gcp-monitoring/: pyproject.toml  requirements.txt
opentelemetry-exporter-gcp-monitoring/requirements/: requirements-hatch-static-analysis.txt  requirements-hatch-test.py3.10.txt  requirements-hatch-test.py3.11.txt  requirements-hatch-test.py3.8.txt  requirements-hatch-test.py3.9.txt
opentelemetry-exporter-gcp-monitoring/src/opentelemetry/exporter/cloud_monitoring/: __init__.py  _deadline.py
opentelemetry-exporter-gcp-monitoring/tests/: test_cloud_monitoring.py  test_deadline.py
opentelemetry-exporter-gcp-monitoring/tests/fixtures/: gcmfake.py
opentelemetry-exporter-gcp-trace/: pyproject.toml
opentelemetry-exporter-google-cloud/: mypy.ini  setup.cfg
opentelemetry-exporter-google-cloud/src/opentelemetry/exporter/cloud_monitoring/: __init__.py
opentelemetry-exporter-google-cloud/src/opentelemetry/exporter/cloud_trace/: __init__.py
opentelemetry-propagator-gcp/: pyproject.toml
opentelemetry-resourcedetector-gcp/: pyproject.toml
opentelemetry-tools-google-cloud/: setup.cfg
samples/adk-sql-agent/: README.md  main.env  main.py  pyproject.toml
samples/adk-sql-agent/sql_agent/: agent.py
samples/minimal-langsmith-repro/: docker-compose.yml  main.py
samples/pydantic-ai-agent/: README.md  agent.py  main.env  main.py  pyproject.toml  utils.py
test-common/: pyproject.toml  setup.py
typestubs/: setup.cfg  setup.py
typestubs/src/google/api/: distribution_pb2.pyi  label_pb2.pyi  launch_stage_pb2.pyi  metric_pb2.pyi  monitored_resource_pb2.pyi
typestubs/src/google/cloud/monitoring_v3/proto/: common_pb2.pyi  metric_pb2.pyi
typestubs/src/google/cloud/trace_v2/proto/: trace_pb2.pyi  tracing_pb2.pyi
