[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exporter-gcp-trace"
dynamic = ["version"]
description = "Google Cloud Trace exporter for OpenTelemetry"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [{ name = "Google", email = "opentelemetry-pypi@google.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "google-cloud-trace ~= 1.1",
    "opentelemetry-api ~= 1.0",
    "opentelemetry-resourcedetector-gcp >= 1.5.0dev0, == 1.*",
    "opentelemetry-sdk ~= 1.0",
]

[project.optional-dependencies]
test = []

[project.entry-points.opentelemetry_environment_variables]
gcp_trace = "opentelemetry.exporter.cloud_trace.environment_variables"

[project.entry-points.opentelemetry_traces_exporter]
gcp_trace = "opentelemetry.exporter.cloud_trace:CloudTraceSpanExporter"

[project.urls]
Homepage = "https://github.com/GoogleCloudPlatform/opentelemetry-operations-python/tree/main/opentelemetry-exporter-gcp-trace"

[tool.hatch.version]
path = "src/opentelemetry/exporter/cloud_trace/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
