[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-propagator-gcp"
dynamic = ["version"]
description = "Google Cloud propagator for OpenTelemetry"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [{ name = "Google", email = "opentelemetry-pypi@google.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["opentelemetry-api ~= 1.0"]

[project.optional-dependencies]
test = []

[project.entry-points.opentelemetry_propagator]
gcp_trace = "opentelemetry.propagators.cloud_trace_propagator:CloudTraceFormatPropagator"

[project.urls]
Homepage = "https://github.com/GoogleCloudPlatform/opentelemetry-operations-python/tree/main/opentelemetry-propagator-gcp"

[tool.hatch.version]
path = "src/opentelemetry/propagators/cloud_trace_propagator/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
