[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-resourcedetector-gcp"
dynamic = ["version"]
description = "Google Cloud resource detector for OpenTelemetry"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [{ name = "Google", email = "opentelemetry-pypi@google.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "opentelemetry-api ~= 1.0",
    "opentelemetry-sdk ~= 1.0",
    "requests ~= 2.24",
    "typing_extensions ~= 4.0",
]

[project.optional-dependencies]
test = []

[project.urls]
Homepage = "https://github.com/GoogleCloudPlatform/opentelemetry-operations-python/tree/main/opentelemetry-resourcedetector-gcp"

[tool.hatch.version]
path = "src/opentelemetry/resourcedetector/gcp_resource_detector/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
